@@ -1,4 +1,5 @@
 
+	* set the hidden attribute when creating the part file
 	* fix recent regression with force_proxy setting
 	* don't perform DNS lookups for the DHT bootstrap unless DHT is enabled
 	* fix issue where setting file/piece priority would stop checking
